--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,6 +5,7 @@ body, h3, span {
 
 body {
   font-family: 'Poppins', sans-serif;
+  background: #fafafa;
 }
 
 .content {
@@ -38,6 +39,23 @@ body {
           justify-content: center;
   padding-left: 2rem;
   padding-right: 2rem;
+  color: #4c4e61;
+}
+
+.header .lema {
+  font-weight: 100;
+  font-size: xx-large;
+}
+
+.header .offer {
+  font-weight: 600;
+  font-size: xx-large;
+}
+
+.header .description {
+  color: #a3a5ae;
+  max-width: 540px;
+  text-align: center;
 }
 
 .cards {
@@ -47,29 +65,131 @@ body {
       grid-template-columns: repeat(3, 1fr);
   -ms-grid-rows: (1fr)[4];
       grid-template-rows: repeat(4, 1fr);
+  margin: 2rem;
+  position: relative;
 }
 
 .cards .item-1 {
   -ms-grid-row: 2;
       grid-row-start: 2;
   grid-row-end: 4;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  -webkit-box-shadow: -4px 7px 13px 0px #d9e2ed;
+          box-shadow: -4px 7px 13px 0px #d9e2ed;
+  max-width: 250px;
+  margin: .5rem;
+  padding: 2rem;
+  background: white;
+}
+
+.cards .item-1 h3 {
+  padding-bottom: .7rem;
+  color: #4c4e61;
+}
+
+.cards .item-1 span {
+  color: #a3a5ae;
+  min-width: 224px;
+  font-size: small;
 }
 
 .cards .item-2 {
   -ms-grid-row: 1;
       grid-row-start: 1;
   grid-row-end: 3;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  -webkit-box-shadow: -4px 7px 13px 0px #d9e2ed;
+          box-shadow: -4px 7px 13px 0px #d9e2ed;
+  max-width: 250px;
+  margin: .5rem;
+  padding: 2rem;
+  background: white;
+}
+
+.cards .item-2 h3 {
+  padding-bottom: .7rem;
+  color: #4c4e61;
+}
+
+.cards .item-2 span {
+  color: #a3a5ae;
+  min-width: 224px;
+  font-size: small;
+}
+
+.cards .item-2::after {
+  position: absolute;
+  background: red;
+  content: '';
+  height: 5px;
+  top: 0;
+  width: 300px;
+  border-top-left-radius: 5px;
 }
 
 .cards .item-3 {
   -ms-grid-row: 3;
       grid-row-start: 3;
   grid-row-end: 5;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  -webkit-box-shadow: -4px 7px 13px 0px #d9e2ed;
+          box-shadow: -4px 7px 13px 0px #d9e2ed;
+  max-width: 250px;
+  margin: .5rem;
+  padding: 2rem;
+  background: white;
+}
+
+.cards .item-3 h3 {
+  padding-bottom: .7rem;
+  color: #4c4e61;
+}
+
+.cards .item-3 span {
+  color: #a3a5ae;
+  min-width: 224px;
+  font-size: small;
 }
 
 .cards .item-4 {
   -ms-grid-row: 2;
       grid-row-start: 2;
   grid-row-end: 4;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  -webkit-box-shadow: -4px 7px 13px 0px #d9e2ed;
+          box-shadow: -4px 7px 13px 0px #d9e2ed;
+  max-width: 250px;
+  margin: .5rem;
+  padding: 2rem;
+  background: white;
+}
+
+.cards .item-4 h3 {
+  padding-bottom: .7rem;
+  color: #4c4e61;
+}
+
+.cards .item-4 span {
+  color: #a3a5ae;
+  min-width: 224px;
+  font-size: small;
+}
+
+.cards .logo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  margin-top: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
